# SP2_CONTROL

./: .gitignore  README.md
demos_and_doc/single_arm/: CMakeLists.txt  package.xml  plugins.xml
demos_and_doc/single_arm/config/: controllers.yaml
demos_and_doc/single_arm/hardware/: motor.cpp
demos_and_doc/single_arm/hardware/include/single_arm/: motor.hpp
demos_and_doc/single_arm/launch/: single_arm.launch.py  view_robot.launch.py
demos_and_doc/single_arm/urdf/: single_arm.urdf  single_arm_for_SP2Hardware.urdf
sp2_controllers/: CMakeLists.txt  package.xml
sp2_controllers/chassis_controllers/: CMakeLists.txt  chassis_controllers_plugin.xml  package.xml
sp2_controllers/chassis_controllers/config/: roller_wheel_controller_parameter.yaml
sp2_controllers/chassis_controllers/include/chassis_controllers/: chassis_base.hpp  roller_wheel.hpp
sp2_controllers/chassis_controllers/src/: chassis_base.cpp  roller_wheel.cpp
sp2_controllers/include/sp2_controllers/: chassis_base.hpp
sp2_controllers/src/: chassis_base.cpp
sp2_description/: CMakeLists.txt  package.xml
sp2_description/config/: engineer_controllers.yaml
sp2_description/launch/: car.launch.py  car_gazebo.launch.py  robot_ignition_sim.launch.py  view_robot.launch.py
sp2_description/rviz/: view.rviz
sp2_description/urdf/common/: mecanum_wheel.xacro  mecanum_wheel_static.xacro
sp2_description/urdf/engineer/: engineer.ros2_control.xacro  engineer.urdf.xacro
sp2_description/urdf/engineer/engineer_chassis/: engineer_chassis.xacro
sp2_hw/: CMakeLists.txt  package.xml  plugins.xml
sp2_hw/config/: actuator_coefficient.yaml  config.h.in  controllers.yaml
sp2_hw/include/sp2_hw/: hardware.hpp
sp2_hw/include/sp2_hw/hardware_interface/: AsyncSocketCan.hpp  AsyncUsart.hpp  CanBus.hpp  ComBase.hpp  SocketCan.hpp  TestCan.hpp
sp2_hw/include/sp2_hw/utilities/: fake_mecanum_joint_publisher.hpp
sp2_hw/launch/: engineer_hardware.launch.py  hardware.launch.py
sp2_hw/src/: hardware.cpp  node_01.cpp
sp2_hw/src/hardware_interface/: ActuatorCoefficient.yaml  AsyncSocketCan.cpp  AsyncUsart.cpp  CanBus.cpp
sp2_hw/src/utilities/: fake_mecanum_joint_publisher.cpp
